--- a/.github/workflows/AW1000.yml
+++ b/.github/workflows/AW1000.yml
@@ -16,7 +16,7 @@ on:
 env:
   REPO_URL: https://github.com/VIKINGYFY/immortalwrt.git
   CONFIG_FILE: 'config/AW1000.config' 
-  REPO_BRANCH: master
+  REPO_BRANCH: main
   UPLOAD_BIN_DIR: true
   UPLOAD_FIRMWARE: true
   UPLOAD_RELEASE: true
