--- a/.github/workflows/AW1000.yml
+++ b/.github/workflows/AW1000.yml
@@ -105,7 +105,7 @@ jobs:
         if [[ "${{ inputs.log_switch }}" == "yes" ]]; then
             make -j1 V=s
         else
-            make -j$(nproc)
+            make -j1 V=sc
         fi
         grep '^CONFIG_TARGET.*DEVICE.*=y' .config | sed -r 's/.*DEVICE_(.*)=y/\1/' > DEVICE_NAME
         [ -s DEVICE_NAME ] && echo "DEVICE_NAME=_$(cat DEVICE_NAME)" >> $GITHUB_ENV
