--- a/.github/workflows/QAmain.yml
+++ b/.github/workflows/QAmain.yml
@@ -5,7 +5,7 @@ on:
 
 env:
   REPO_URL: https://github.com/qosmio/openwrt-ipq.git
-  REPO_BRANCH: master
+  REPO_BRANCH: 24.10-nss
   CONFIG_FILE: config/AW1000.config
   TZ: Asia/Kuala_Lumpur
 
